kubernetes/apps/rook-ceph/rook-ceph/cluster/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  annotations:
    gethomepage.dev/description: "Cluster storage dashboard"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Storage"
    gethomepage.dev/icon: "mdi-harddisk"
    gethomepage.dev/name: "Rook-Ceph"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=ceph-mgr"
spec:
  hostnames:
    - "ceph.${DOMAIN_CLUSTER}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
